-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 15.0.0-beta2
-
Ubuntu 22.04
available Kits - only Python which is not used here
-
37d8c1e44 (15.0), a3f2cba2a (15.0)
Hello,
I might have found a bug where I can create project without compatible kit then Qt creator crashes.
Steps to reproduce:
1. Have fresh Qt Creator and start Qt Creator*
2. Press green button Create Project
3. Select Application(Qt)->Qt Quick Application
4. Observe that Nothing lists under bold "Supported Platforms:" text
5. Press Choose
6. Press Next twice
7. Observe Kit selection tab - No suitable kits found (which might be correct)
8. Press Next and Finish
Actual result:
Qt creator crashes, Segmentation fault
Expected result:
- Case handled properly, no Segmentation fault, no crash?
- I have tested
qt-creator-opensource-linux-x86_64-15.0.0-beta2_297.run
(Terminal_build.png, Core dump too big to upload - 548MB)
and latest self compiled version
| qt-creator-opensource-src-15.0.0-beta2.zip | 22-Oct-2024 06:15 | 73M | Details |
(Terminal_compiled.png, gdb_logs.txt)
| For Gerrit Dashboard: QTCREATORBUG-31879 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 599005,3 | CMake: Don't unncessarily access buildConfiguration() | 15.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 599195,4 | PE: Fix Kit enablement | 15.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 600720,1 | PE: Fix Kit enablement | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
| 600740,1 | CMake: Don't unncessarily access buildConfiguration() | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |