CMake: Don't unncessarily access buildConfiguration()

... to get the kit.

Task-number: QTCREATORBUG-31879
Change-Id: Iaad1b920043a49ddae7c5212e4f7b3cf1b8569b7
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>